# ynab-integrations

./: .gitignore  Dockerfile  README.md  app.py  config.ini  connector_config.ini  docker-compose.yml  pyproject.toml  ynab_config.ini
src/: __init__.py  index.py
src/config/: README.md  connector_config.ini  example_connector_config.ini  example_ynab_config.ini  ynab_config.ini
src/connectors/: __init__.py  base_connector.py
src/connectors/imap/: README.md  imap_connector.py
src/consumer/: .env_sample  __init__.py  consumer.py  test file  writer.py
src/message_parsers/: __init__.py  base_parser.py  citi_card_email.py  uob_atm_email.py  uob_card_email.py  uob_fast_email.py  uob_giro_email.py  uob_paynow_email.py
src/producer/: __init__.py  kafka_publisher.py  test.py
src/utils/: constants.py  models.py
tests/unit/: test_parsers.py  test_ynab_integrations_stack.py
ynab_integrations/: ynab_integrations_stack.py
