[tool.poetry]
name = "ynab-integrations"
version = "0.1.0"
description = ""
authors = ["Gerald Lau <gerald.lau.95@gmail.com>"]
readme = "README.md"
packages = [
    {include = "ynab_integrations"},
]

[tool.poetry.dependencies]
python = "^3.10"
aws-cdk-lib = "2.86.0"
constructs = "^10.2.52"
imap-tools = "^1.0.0"
pydantic = "^2.0"
docker = "^6.1.3"
aws-cdk-aws-lambda-python-alpha = "^2.86.0a0"
typing-extensions = "^4.1.1,<4.7"
ynab-api = "^2.0.2"
aws-lambda-powertools = "^2.19.0"
pytz = "^2023.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
ruff = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
